Approve document + small adjustments

--- a/D2.1/D2.1_application_enhancements.tex
+++ b/D2.1/D2.1_application_enhancements.tex
@@ -15,7 +15,7 @@
 \begin{document}
 
 % Create the title page with the title as argument
-\maketitlepage{"Enhancements made to the digital twin applications"}
+\maketitlepage{Report on enhancements made to the digital twin applications}
 
 \newpage
 
@@ -25,7 +25,7 @@
     \tableEntry{Deliverable number}{D2.1}
     \tableEntry{Deliverable version}{0.1}
     \tableEntry{Date of delivery}{31.03.2025}
-    \tableEntry{Actual date of delivery}{[Actual date]}
+    \tableEntry{Actual date of delivery}{28.03.2025}
     \tableEntry{Nature of deliverable}{Report}
     \tableEntry{Dissemination level}{Public}
     \tableEntry{Work Package}{WP2}
@@ -41,12 +41,14 @@
 \newpage
 
 \begin{documentControl}
-    \addVersion{0.1}{26.03.2025}{Buğrahan Zeynel Temür (TUM)}{Initial draft}
+    \addVersion{0.1}{26.03.2025}{Buğrahan Zeynel Temür (TUM)}{Initial draft with info of all partners}
+    \addVersion{0.2}{27.03.2025}{Buğrahan Zeynel Temür (TUM)}{Adjustments after review}
+    \addVersion{1.0}{28.03.2025}{Buğrahan Zeynel Temür (TUM)}{Final adjustments}
 \end{documentControl}
 
 \subsection*{{Approval Details}}
-Approved by: [Name] \\
-Approval Date: [Date]
+Approved by: M. Kronbichler \\
+Approval Date: 28.03.2025
 
 \subsection*{{Distribution List}}
 \begin{itemize}
