Fix one issue found with spell checking

--- a/D2.1/D2.1_application_enhancements.tex
+++ b/D2.1/D2.1_application_enhancements.tex
@@ -129,7 +129,7 @@ If successful, this will provide support for exploring high-order discretization
 \subsection{Brain (FAU)}
 Despite decades of research, the human brain still poses exciting challenges for researchers from various fields.
 More recently, there is increasing interest in the role of mechanical signals for brain development, injury, and disease.
-Modelling based on the theory of nonlinear continuum mechanics proves a valuable tool to computationally test hypotheses that complement experimental findings, to understand processes in the brain under physiological and pathological conditions, and to assist diagnosis and treatment of neurological disorders through personalized predictions.
+Modeling based on the theory of nonlinear continuum mechanics proves a valuable tool to computationally test hypotheses that complement experimental findings, to understand processes in the brain under physiological and pathological conditions, and to assist diagnosis and treatment of neurological disorders through personalized predictions.
 Depending on the application, mechanical models for human brain tissue need to cover a wide range of time and length scales.
 Its highly heterogeneous, region-dependent microstructure relates to viscoelastic and poroelastic effects that cannot be neglected for predictions on the organ scale.
 Viscoelastic models with two relaxation times have been successful in capturing the time-dependent mechanical response of brain tissue under various loading conditions.
