--- a/D1.2/D1.2_dealii_report.tex
+++ b/D1.2/D1.2_dealii_report.tex
@@ -29,7 +29,7 @@
     \tableEntry{Deliverable number}{D1.2}
     \tableEntry{Deliverable version}{v1}
     \tableEntry{Date of delivery}{March 31, 2025}
-    \tableEntry{Actual date of delivery}{March 31, 2025}
+    \tableEntry{Actual date of delivery}{March 28, 2025}
     \tableEntry{Nature of deliverable}{Report}
     \tableEntry{Dissemination level}{Public}
     \tableEntry{Work Package}{WP1}
@@ -39,7 +39,7 @@
 % Abstract and Keywords Section
 \begin{deliverableTable}
     \tableEntry{Abstract}{This report details the progress made during the first semester (Months 1--6) of the dealii-X project in enhancing the deal.II finite element library. The focus is on improvements for exascale readiness, specifically in high-performance matrix assembly, matrix-free GPU integration, as well as the initial performance evaluation of the polygonal discretization module (to be integrated in the library). Furthermore, this report outlines other relevant enhancements to deal.II undertaken within the project's work packages during this period.}
-    \tableEntry{Keywords}{Keyword 1; Keyword 2; Keyword 3; Keyword 4; Keyword 5}
+    \tableEntry{Keywords}{deal.II library; finite element method; Krylov subspace methods; sparse direct solver; matrix-free algorithms; mesh generation; CUDA; Kokkos}
 \end{deliverableTable}
 
 \newpage
