Shorten title for nicer appearance

--- a/D2.1/D2.1_application_enhancements.tex
+++ b/D2.1/D2.1_application_enhancements.tex
@@ -15,7 +15,7 @@
 \begin{document}
 
 % Create the title page with the title as argument
-\maketitlepage{Report on enhancements made to the digital twin applications}
+\maketitlepage{Report on enhancements of the digital twin applications}
 
 \newpage
 
