--- a/D2.6/D2.6.tex
+++ b/D2.6/D2.6.tex
@@ -26,7 +26,7 @@
     \tableEntry{Deliverable number}{D2.6}
     \tableEntry{Deliverable version}{1.0}
     \tableEntry{Date of delivery}{31/03/2025}
-    \tableEntry{Actual date of delivery}{31/03/2025}
+    \tableEntry{Actual date of delivery}{28/03/2025}
     \tableEntry{Nature of deliverable}{Report}
     \tableEntry{Dissemination level}{Public}
     \tableEntry{Work Package}{WP2}
@@ -60,15 +60,16 @@
 \newpage
 
 \begin{documentControl}
-    \addVersion{0.1}{03/03/2025}{G.P. Brandino, M. Franzon, F. De Giorgi}{Initial draft}
+  \addVersion{0.1}{03/03/2025}{G.P. Brandino, M. Franzon,}{Initial draft}
+  \addVersion{}{}{F. De Giorgi}{}
     \addVersion{0.2}{26/03/2025}{L. Heltai}{Abstract, keywords, and
         editing}
-    \addVersion{1.0}{[Date]}{[Author name]}{Final version}
+    \addVersion{1.0}{27/03/2025}{G.P. Brandino}{Final version}
 \end{documentControl}
 
 \subsection*{{Approval Details}}
 Approved by: M. Kronbichler \\
-Approval Date: 31/03/2025
+Approval Date: 28/03/2025
 
 \subsection*{{Distribution List}}
 \begin{itemize}
