Beauty in template

--- a/common/deliverable.sty
+++ b/common/deliverable.sty
@@ -165,7 +165,7 @@
 \makeatother
 
 
-\newcommand{\disclaimer}{\noindent \textbf{Disclaimer}: This project has received funding from the European Union. The views and opinions expressed are those of the author(s) only and do not necessarily reflect those of the European Union or the European High-Performance Computing Joint Undertaking (the "granting authority"). Neither the European Union nor the granting authority can be held responsible for them.}
+\newcommand{\disclaimer}{\noindent \textbf{Disclaimer}: This project has received funding from the European Union. The views and opinions expressed are those of the author(s) only and do not necessarily reflect those of the European Union or the European High-Performance Computing Joint Undertaking (the ``granting authority''). Neither the European Union nor the granting authority can be held responsible for them.}
 
 % Document Control Information environment
 \newenvironment{documentControl}{%
