--- a/D3.1/D3.1_connect_to_other_coes.tex
+++ b/D3.1/D3.1_connect_to_other_coes.tex
@@ -25,7 +25,7 @@
 \begin{deliverableTable}
     \tableEntry{Deliverable title}{Connection to other CoEs}
     \tableEntry{Deliverable number}{D3.1}
-    \tableEntry{Deliverable version}{4.0}
+    \tableEntry{Deliverable version}{1.0}
     \tableEntry{Date of delivery}{31 March 2025}
     \tableEntry{Actual date of delivery}{31 March 2025}
     \tableEntry{Nature of deliverable}{Report}
@@ -38,16 +38,25 @@
 
 % Abstract and Keywords Table
 \begin{deliverableTable}
-  \tableEntry{Abstract}{D3.1 presents the integration of deal.II into EuroHPC's overarching infrastructure CASTIEL 2}
-  \tableEntry{Keywords}{supercomputer access in EU; continuous integration; continuous deployment}
+  \tableEntry{Abstract}{The report details the activities of the dealii-X
+    project towards other CoEs in Europe. We are active in several directions.
+    A major activity is the involvement in the CASTIEL 2 project, where we
+    collaborate in terms of joint codes and the important activities on CI/CD,
+    which enables the use of our software on European
+    supercomputers. Furthermore, dealii-X engages in a seminar series that
+    also invites partners from other CoEs to participate for in-depth
+    exchange. Finally, dealii-X contributes to training and workshops,
+    organized through the infrastructure of the partner LRZ.}
+  \tableEntry{Keywords}{supercomputer access in EU; continuous integration;
+    continuous deployment}
 \end{deliverableTable}
 
 
 \begin{documentControl}
-    \addVersion{1.0}{20.03.2025}{M. Kronbichler}{Initial Draft}
-    \addVersion{2.0}{27.03.2025}{I. Pribec, G. Mathias, M. Allalen}{Augment Document}
-    \addVersion{3.0}{27.03.2025}{M. Kronbichler}{Minor Additions}
-    \addVersion{4.0}{27.03.2025}{I. Pribec}{Final Version}
+    \addVersion{0.1}{20.03.2025}{M. Kronbichler}{Initial Draft}
+    \addVersion{0.2}{27.03.2025}{I. Pribec, G. Mathias, M. Allalen}{Augment Document}
+    \addVersion{0.3}{27.03.2025}{M. Kronbichler}{Minor Additions}
+    \addVersion{1.0}{31.03.2025}{I. Pribec}{Final Version}
 \end{documentControl}
 
 \subsection*{{Approval Details}}
